# RustBot

./: .gitignore  BuildContainer.sh  Cargo.toml  Dockerfile  Dockerfile_bot  Dockerfile_runner  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  package-readme.txt
.github/: dependabot.yaml
.github/workflows/: auto-update-runner.yaml  build-release-container.yaml  check.yaml  docker.yaml  release.yaml  rustbot-docker.yaml
assets/: README.md
assets/container/: trampoline
assets/templates/: help_general.md  help_help.md  help_ping.md  help_run.md  help_running.md  run_error_too_long.md  run_no_output.md
doc/: container.md  discord.md  internals.md  templates.md
src/: constants.rs  lib.rs  main.rs
src/commands/: help.rs  mod.rs  ping.rs  run.rs
src/model/: container.rs
src/util/: command.rs  configuration.rs  mod.rs  template.rs  template_reader.rs
