[package]
name = "rustbot"
license = "MIT/Apache-2.0"
authors = [ "Conner Bradley <bradley@advtech.ca>" ]
description = "A discord bot that runs whatever rust code is thrown at it"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "rustbot"

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "0.3.5"
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
dotenv = { version = "0.15.0" }
serenity = "0.10.9"
regex = "1.5.4"
base64 = "0.13.0"
process_control = "3.2"
cached = "0.26.2"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/*rustbot", dest = "/opt/rustbot", mode = "0755" },
    { source = "target/release/assets/templates/*", dest = "/opt/rustbot/assets/templates", mode = "0644" },
    { source = "LICENSE*", dest = "/opt/rustbot", doc = true, mode = "0644" },
    { source = "package-readme.txt", dest = "/opt/rustbot/README.txt", doc = true, mode = "0644" }
]