[package]
name = "rustbot"
license = "MIT/Apache-2.0"
authors = [ "Conner Bradley <bradley@advtech.ca>" ]
description = "A discord bot that runs whatever rust code is thrown at it"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "rustbot"

[dependencies]
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tokio = { version = "1.16", features = ["macros", "signal", "rt-multi-thread"] }
dotenv = { version = "0.15.0" }
serenity = "0.11.4"
regex = "1.6.0"
base64 = "0.13.0"
process_control = "3.5"
cached = "0.37.0"
lazy_static = "1.4.0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/*rustbot", dest = "/opt/rustbot", mode = "0755" },
    { source = "target/x86_64-unknown-linux-musl/release/assets/templates/*", dest = "/opt/rustbot/assets/templates", mode = "0644" },
    { source = "LICENSE*", dest = "/opt/rustbot", doc = true, mode = "0644" },
    { source = "package-readme.txt", dest = "/opt/rustbot/README.txt", doc = true, mode = "0644" }
]